<resources>
    <string name="app_name">My Social Network</string>
    <string name="welcome_login">Bem Vindo</string>
    <string name="password_login">Senha</string>
    <string name="btnLogin_login">Login</string>
    <string name="fill_all_fields">Preencha todos os campos</string>
    <string name="error_msg_login">Email ou senha incorretos</string>
    <string name="error_msg_generic">um erro aconteceu, tente mais tarde</string>
    <string name="userCreated_msg">usuário criado com sucesso!</string>
    <string name="tv_signUp_login">Ainda não registrado? clique aqui e se registre agora</string>
    <string name="cb_rememberMe_login">Lembre-se de mim</string>
    <string name="registerBanner">Cadastre-se</string>
    <string name="hint_name_register">Nome</string>
    <string name="hint_password_register">Senha</string>
    <string name="hint_gender">Genêro</string>
    <string name="hint_age">Idade</string>
    <string name="register_btn_text">Cadastrar</string>
    <string name="menu_btn_logout">Deslogar</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu_btn_home">Home</string>
    <string name="what_are_you_think_et">No que você esta pensando?</string>
    <string name="add_post_btn">Postar</string>
    <string name="cancel_post_btn">Limpar</string>
    <string name="tv_dashboard_whats_new">O que há de novo?</string>
    <string name="profile_text_recent_posts">Posts Recentes</string>
    <string name="menu_user_prefs">Preferências do usuário</string>
    <string name="user_prefs_username">Nome</string>
    <string name="user_prefs_age">Idade</string>
    <string name="user_prefs_gender">Gênero</string>
</resources>