<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_post"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/what_are_you_think_et"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_post_btn"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_cancel_post"
        app:layout_constraintTop_toBottomOf="@id/til_add_post" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_post_btn"
        app:layout_constraintLeft_toRightOf="@id/btn_add_post"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_post" />


</androidx.constraintlayout.widget.ConstraintLayout>