<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".featureLogin.ui.register.RegisterFragment">

    <TextView
        android:id="@+id/tv_banner_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/registerBanner"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="Email"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_banner_register">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_name_register"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_email">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_password_register"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_name">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_gender"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">


        <AutoCompleteTextView
            android:id="@+id/sp_gender_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:inputType="none"
            android:focusable="false"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_age"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_gender">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_age_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_marginTop="30dp"
        android:text="@string/register_btn_text"
        app:layout_constraintTop_toBottomOf="@id/layout_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>