<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".featureUserProfile.ui.ProfileFragment">

        <ImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/user_prefs_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/user_prefs_age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/user_prefs_gender">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_edit" />


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/profile_text_recent_posts"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_user_profile_posts"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="20dp" />


    </LinearLayout>
</ScrollView>
